--- a/consumer/src/main/resources/application.yml
+++ b/consumer/src/main/resources/application.yml
@@ -5,10 +5,10 @@ logging:
     cn.itcast: debug
 spring:
   rabbitmq:
-    host: 192.168.150.101 # rabbitMQ的ip地址
+    host: 192.168.125.100 # rabbitMQ的ip地址
     port: 5672 # 端口
-    username: itcast
-    password: 123321
+    username: guest
+    password: guest
     virtual-host: /
     listener:
       simple:
