--- a/publisher/src/main/resources/application.yml
+++ b/publisher/src/main/resources/application.yml
@@ -5,8 +5,12 @@ logging:
     cn.itcast: debug
 spring:
   rabbitmq:
-    host: 192.168.150.101 # rabbitMQ的ip地址
+    host: 192.168.125.100 # rabbitMQ的ip地址
     port: 5672 # 端口
-    username: itcast
-    password: 123321
+    username: guest
+    password: guest
     virtual-host: /
+    publisher-confirm-type: correlated
+    publisher-returns: true
+    template:
+      mandatory: true
