--- a/consumer/src/main/resources/application.yml
+++ b/consumer/src/main/resources/application.yml
@@ -7,8 +7,8 @@ spring:
   rabbitmq:
     host: 192.168.125.100 # rabbitMQ的ip地址
     port: 5672 # 端口
-    username: guest
-    password: guest
+    username: yepianer
+    password: 123456
     virtual-host: /
     listener:
       simple:
